--- a/tables/fw100k_medsky_offset_hierarchy.tex
+++ b/tables/fw100k_medsky_offset_hierarchy.tex
@@ -3,23 +3,23 @@
 &  & \multicolumn{2}{c|}{$J$} & \multicolumn{2}{c}{$K_s$} \\ % \cline{3-4} \cline{5-6}
 % \hline
 Offset Type & Sem. & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ \\
-& & \tiny{($\mu$Jy)} &  \tiny{(\%)} & \tiny{($\mu$Jy)} &  \tiny{(\%)} \\
+& & \tiny{($\mu$Jy arcsec$^{-2}$)} &  \tiny{(\%)} & \tiny{($\mu$Jy arcsec$^{-2}$)} &  \tiny{(\%)} \\
 \hline
-\multirow{2}{*}{$\Delta_F$} & 07B & 18.5 & 2.37 & 396.0 & 1.79 \\
+\multirow{2}{*}{$\Delta_F$} & 07B & 18.5 & 2.37 & 39.7 & 1.79 \\
 % \hline
-& 09B  & 15.2 & 1.70 & 394.7 & 2.26 \\
+& 09B  & 15.2 & 1.70 & 39.5 & 2.26 \\
 \hline
-\multirow{2}{*}{$\Delta_S$} & 07B & 1.1 & 0.14 & 18.9 & 0.09 \\
+\multirow{2}{*}{$\Delta_S$} & 07B & 1.1 & 0.14 & 1.9 & 0.09 \\
 % \hline
-& 09B & 1.1 & 0.11 & 14.8 & 0.08 \\
+& 09B & 1.1 & 0.11 & 1.5 & 0.08 \\
 \hline
-\multirow{2}{*}{$\Delta_B$} & 07B & 9.8 & 1.27 & 192.1 & 0.91 \\
+\multirow{2}{*}{$\Delta_B$} & 07B & 9.8 & 1.27 & 19.2 & 0.91 \\
 % \hline
-& 09B &  7.0 & 0.73 & 265.8 & 1.43 \\
+& 09B &  7.0 & 0.73 & 26.6 & 1.43 \\
 % \hline
 \hline
-\multirow{2}{*}{$\Delta_\Sigma$} & 07B &  20.4 & 2.61 & 433.8 & 1.99 \\
+\multirow{2}{*}{$\Delta_\Sigma$} & 07B &  20.4 & 2.61 & 43.4 & 1.99 \\
 % \hline
-& 09B &  16.3 & 1.81 & 379.8 & 2.15 \\
+& 09B &  16.3 & 1.81 & 38.0 & 2.15 \\
 % \hline
 \end{tabular}
