--- a/tables/fw100k_medsky_offset_hierarchy.tex
+++ b/tables/fw100k_medsky_offset_hierarchy.tex
@@ -3,23 +3,23 @@
 &  & \multicolumn{2}{c|}{$J$} & \multicolumn{2}{c}{$K_s$} \\ % \cline{3-4} \cline{5-6}
 % \hline
 Offset Type & Sem. & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ \\
-& & \tiny{($\mu$Jy arcsec$^{-2}$)} &  \tiny{(\%)} & \tiny{($\mu$Jy arcsec$^{-2}$)} &  \tiny{(\%)} \\
+& & \tiny{(ADU s$^{-1}$)} &  \tiny{(\%)} & \tiny{(ADU s$^{-1}$)} &  \tiny{(\%)} \\
 \hline
-\multirow{2}{*}{$\Delta_F$} & 07B & 18.5 & 2.37 & 39.7 & 1.79 \\
+\multirow{2}{*}{$\Delta_F$} & 07B & 2.86 & 2.37 & 8.90 & 1.79 \\
 % \hline
-& 09B  & 15.2 & 1.70 & 39.5 & 2.26 \\
+& 09B  & 2.02 & 1.70 & 10.91 & 2.26 \\
 \hline
-\multirow{2}{*}{$\Delta_S$} & 07B & 1.1 & 0.14 & 1.9 & 0.09 \\
+\multirow{2}{*}{$\Delta_S$} & 07B & 0.17 & 0.14 & 0.46 & 0.09 \\
 % \hline
-& 09B & 1.1 & 0.11 & 1.5 & 0.08 \\
+& 09B & 0.17 & 0.11 & 0.42 & 0.08 \\
 \hline
-\multirow{2}{*}{$\Delta_B$} & 07B & 9.8 & 1.27 & 19.2 & 0.91 \\
+\multirow{2}{*}{$\Delta_B$} & 07B & 1.51 & 1.27 & 4.65 & 0.91 \\
 % \hline
-& 09B &  7.0 & 0.73 & 26.6 & 1.43 \\
+& 09B &  0.95 & 0.73 & 7.59 & 1.43 \\
 % \hline
 \hline
-\multirow{2}{*}{$\Delta_\Sigma$} & 07B &  20.4 & 2.61 & 43.4 & 1.99 \\
+\multirow{2}{*}{$\Delta_\Sigma$} & 07B &  3.14 & 2.61 & 9.90 & 1.99 \\
 % \hline
-& 09B &  16.3 & 1.81 & 38.0 & 2.15 \\
+& 09B &  2.19 & 1.81 & 10.65 & 2.15 \\
 % \hline
 \end{tabular}
