Idea to make sky level timeseries plots

--- a/skysub.tex
+++ b/skysub.tex
@@ -745,6 +745,11 @@ The sky offsets are indeed distributed within the uncertainty budgeted by $\sigm
 % TODO need to fix colour scheme of the histograms
 \end{figure}
 
+Another demonstration of the veracity of these sky offsets is given in Fig. \todo{TODO}, where we plot a timeseries of both directly measured sky levels, and sky levels interpolated on disk observations via sky offsets.
+Note how remarkably continuous the sky level is from sky to disk observation; compared to the sky level timeseries of stationary sky fields, the variations in the sky level interpolated on the disk appear real.
+Through the sky target nodding and sky offset optimization, we \emph{have} effectively measured the level of the sky on M31.
+The variability of the sky in these timeseries will be further pursued in \S \todo{TODO}.
+
 \subsection{Residual image level differences}
 \label{sec:residual_diffs}
 
