--- a/skysub.tex
+++ b/skysub.tex
@@ -675,7 +675,7 @@ Let us denote the offsets of stacks into blocks as $\Delta_S$. Finally, we again
 
 We can now present the fruits of our WIRCam pipeline and sky offset optimization with \Fig{scalar_mosaics}.
 Compared to our mosaics without sky offsets, \Fig{raw_mosaics}, it is clear that sky offset optimization is essential for assembling wide-field NIR mosaics.
-Note that these mosaics are not yet perfect; field-to-field discontinuities remain, and the large-scale sky residuals perturb the outer M31 disk.
+Note that these mosaics are not yet perfect; field-to-field discontinuities remain, and large-scale sky residuals perturb the outer M31 disk.
 
 \begin{figure}[t]
 	\centering
@@ -750,42 +750,39 @@ Note how remarkably continuous the sky level is from sky to disk observation; co
 Through the sky target nodding and sky offset optimization, we \emph{have} effectively measured the level of the sky on M31.
 The variability of the sky in these timeseries will be further pursued in \S \todo{TODO}.
 
-\subsection{Residual image level differences}
+\subsection{Residual Image Level Differences}
 \label{sec:residual_diffs}
 
 Although the scalar sky offsets are statistically valid, they are not perfect prescriptions against the sky subtraction uncertainties of each image stack---that much is visually true.
-A measure of the limitation of sky offset fitting are the residual image level differences between coupled blocks, $(\vect{I}_i - \Delta_i) - (\vect{I}_j - \Delta_j)$, after the sky offsets $\Delta_i$ have been optimally fitted to each block.
+A measure of the limitation of sky offset fitting are the residual image level differences between coupled blocks, $(\vect{I}_i - \Delta_{B,i}) - (\vect{I}_j - \Delta_{B,j})$, after the sky offsets $\Delta_{B,i}$ have been optimally fitted to each block.
 
-Table~\ref{tab:resid_diffs} shows the distributions of both image level differences between coupled blocks, and residual differences after application of scalar sky offsets.
+\Tab{resid_diffs} lists distributions of both image level differences between coupled blocks, before and after the application of scalar sky offsets.
 Uncorrected, the ensemble of coupled blocks have a median intensity difference of $\sim 0.4\%$ of the typical sky background intensity.
 Scalar sky offsets decrease the differences between overlapping fields to $\sim 0.02\%$.
+\todo{TODO: update table}.
 
-% Figures \ref{fig:J0709B_net_resid} and \ref{fig:K0709B_net_resid} show networks of residual image differences as a percentage of local surface intensity in the $J$ and $K_s$ mosaics.
-% This visualization mimics the spatial distribution of the 2007B and 2009B WIRCam fields (Fig \ref{fig:fieldmap}), but the field boxes have been exploded to allow room for lines to connect coupled detector fields.
-% The thickness and colour of the line is modulated against the size of the residual image difference compared to the local surface intensity in the image overlap region.
-% Where disk \sn\ is high in the inner M31 disk, the residual image differences are $\lesssim 1\%$ of the local surface intensity.
-% But in the outer disk, residual image differences can become formidable: 50\%--100\% of the local surface intensity.
+With \Fig{fw100k_medsky_scalar_resid_sbfrac} we can visualize these block-to-block residual differences as a fraction of the local surface brightness.
+Note that throughout the bright inner disk of M31, block-to-block residuals are negligible compared to the disk signal; but at the mosaic periphery ($R\sim 20$~kpc), the field-to-field residuals become comparable to, or greater than, the disk surface brightness.
+The poor fit is driven primarily by diminishing disk signal, rather than poor convergence of sky offsets.
+This can be seen by plotting the magnitude of block-to-block residuals (in units of sky brightness) in \Fig{fw100k_medsky_scalar_resid_skyfrac}.
+There, significant residuals are distributed throughout the disk, rather than the low-SB periphery of the mosaic.
+\comment{Note that these residuals can be as much as 2\% of the sky brightness! This is bad; used to be 0.02\%! What happened?}
 
-% Figure~\ref{fig:scalar_residual_sb_net} are visualizations of the block-to-block coupling networks in the $J$ and $K_s$ mosaics.
-% Connections in this network are shown as 
-
-\todo{Update \Fig{scalar_residual_sb_net} with residuals as a percentage of the sky, or as a percentage of the disk SB in the overlap. This residual SB measurement isn't terribly useful.}
-
-Of course, it is precisely this residual image level difference that was sought to be minimized as part of the optimization's objective function (Eq \ref{eq:objf}).
+Of course, it is precisely this residual image level difference that was sought to be minimized as part of the optimization's objective function (\Eq{objf}).
 The inability of scalar sky offset optimization to eliminate residual image differences should not be interpreted as a failure to detect the global minimum; the MSRNM optimization algorithm appears robust in arriving at this offset solution set.
-Evidence of this can be seen in \Fig{scalar_relresidnet}, where block-to-block network connections are coloured by the ratio of the residual block-to-block intensity difference to the uncertainty in the block-to-block difference image.
+Evidence of this can be seen in \Fig{fw100k_medsky_scalar_resid_sigmafrac}, where block-to-block network connections are coloured by the ratio of the residual block-to-block intensity difference to the uncertainty in the block-to-block difference image.
 The sky offsets solved by the MSRNM algorithm are within the uncertainties of the difference images themselves; better scalar sky offsets \emph{cannot} be made with the WIRCam blocks our pipeline has produced.
 Nonetheless, block-to-block surface brightness discontinuities are plainly seen in \Fig{scalar_mosaics}.
 
 An interpretation of this failure is that sky background residuals are not entirely scalar across WIRCam blocks.
 Our discussion in \Sec{skyflatstability}, and particularly \Fig{frame_residuals_M31-37_Ks_fw100k_medsky}, indicate that flat field variability, and sky background variability can affect the shape of WIRCam fields.
-% If so, then the minimization of the median block-to-block image difference through sky offsets will no longer minimize surface brightness discontinuities between blocks.
 
 \begin{table}[t]
 \centering
 \caption[Coupled block differences and residual differences after
 scalar sky offsets]{Coupled block intensity differences and residual intensity differences after application of scalar sky offsets: 25th, 50th and 75th percentiles of distribution.
-Differences are presented as a percent of the mean sky level seen by individual blocks.}
+Differences are presented as a percent of the mean sky level seen by individual blocks.
+}
 \label{tab:resid_diffs}
 \begin{tabular}{lccc}
 & \multicolumn{3}{c}{Coupled Block $\langle I_i - I_j\rangle / \langle I_\mathrm{sky} \rangle$ (\%)} \\
@@ -802,23 +799,33 @@ $K_s$, scalar offset & 0.01 & 0.02 & 0.05 \\
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=3.5in]{figs/scalar_residual_sb_net}
-\caption{Residual surface brightness differences after scalar fitting.}
-\label{fig:scalar_residual_sb_net}
-% made with skyoffset/networkmap.py
-% TODO need to fix colour scheme of the histograms
+\includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_sbfrac}
+\caption{Map of residual block-to-block surface brightness differences as a fraction of mean local surface brightness, after scalar fitting.
+  This graph mimics the spatial distribution of the 2007B and 2009B WIRCam fields (\Fig{fieldmap}), but the field boxes have been exploded to allow room for lines to connect coupled blocks.
+}
+\label{fig:fw100k_medsky_scalar_resid_sbfrac}
+% made with $andpipe/wircam/calibset/mosaic/networkmap.py
 \end{figure}
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=3.5in]{figs/scalar_relresidnet}
-\caption{Residual surface brightness differences relative to the intensity uncertainty of the coupled difference images.}
-\label{fig:scalar_relresidnet}
-% made with skyoffset/networkmap.py
-% TODO need to fix colour scheme of the histograms
+\includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_skyfrac}
+\caption{Map of residual block-to-block surface brightness differences as a fraction of the mean sky level, after scalar fitting.}
+\label{fig:fw100k_medsky_scalar_resid_skyfrac}
+% made with $andpipe/wircam/calibset/mosaic/networkmap.py
 \end{figure}
 
+\begin{figure}[t]
+\centering
+\includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_sigmafrac}
+\caption{Map of residual block-to-block surface brightness differences as a fraction of the standard deviation of the difference image, after scalar fitting.}
+\label{fig:fw100k_medsky_scalar_resid_sigmafrac}
+% made with $andpipe/wircam/calibset/mosaic/networkmap.py
+\end{figure}
+
+
 \subsection{Usefulness of Planar Sky Offsets}
+
 \label{sec:planar_offset_analysis}
 
 \todo{\begin{enumerate}
