--- a/tables/fw100k_medsky_offset_hierarchy.tex
+++ b/tables/fw100k_medsky_offset_hierarchy.tex
@@ -3,23 +3,23 @@
 &  & \multicolumn{2}{c|}{$J$} & \multicolumn{2}{c}{$K_s$} \\ % \cline{3-4} \cline{5-6}
 % \hline
 Offset Type & Sem. & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ \\
-& & \tiny{(ADU s$^{-1}$)} &  \tiny{(\%)} & \tiny{(ADU s$^{-1}$)} &  \tiny{(\%)} \\
+& & \tiny{(DN)} &  \tiny{(\%)} & \tiny{(DN)} &  \tiny{(\%)} \\
 \hline
-\multirow{2}{*}{$\Delta_F$} & 07B & 2.86 & 2.37 & 8.90 & 1.79 \\
+\multirow{2}{*}{$\Delta_F$} & 07B & 10.47 & 2.37 & 53.45 & 1.79 \\
 % \hline
-& 09B  & 2.02 & 1.70 & 10.91 & 2.26 \\
+& 09B  & 8.59 & 1.70 & 53.27 & 2.26 \\
 \hline
-\multirow{2}{*}{$\Delta_S$} & 07B & 0.17 & 0.14 & 0.46 & 0.09 \\
+\multirow{2}{*}{$\Delta_S$} & 07B & 0.61 & 0.14 & 2.55 & 0.09 \\
 % \hline
-& 09B & 0.17 & 0.11 & 0.42 & 0.08 \\
+& 09B & 0.61 & 0.11 & 2.00 & 0.08 \\
 \hline
-\multirow{2}{*}{$\Delta_B$} & 07B & 1.51 & 1.27 & 4.65 & 0.91 \\
+\multirow{2}{*}{$\Delta_B$} & 07B & 5.54 & 1.27 & 25.93 & 0.91 \\
 % \hline
-& 09B &  0.95 & 0.73 & 7.59 & 1.43 \\
+& 09B &  3.95 & 0.73 & 35.87 & 1.43 \\
 % \hline
 \hline
-\multirow{2}{*}{$\Delta_\Sigma$} & 07B &  3.14 & 2.61 & 9.90 & 1.99 \\
+\multirow{2}{*}{$\Delta_\Sigma$} & 07B &  0.97 & 2.61 & 15.49 & 1.99 \\
 % \hline
-& 09B &  2.19 & 1.81 & 10.65 & 2.15 \\
+& 09B &  2.63 & 1.81 & 14.12 & 2.15 \\
 % \hline
 \end{tabular}
