A start on the conclusions section...

--- a/skysub.tex
+++ b/skysub.tex
@@ -23,6 +23,7 @@
 
 \newcommand{\ie}{\textit{i.e.,~}}
 \newcommand{\eg}{\textit{e.g.,~}}
+\newcommand{\etal}{et~al~}
 \newcommand{\vect}[1]{\boldsymbol{#1}} % vectors or images
 \newcommand{\sw}[1]{\textit{#1}} % style software titles
 \newcommand{\sn}{\ensuremath{S/N}} % signal to noise
@@ -1135,7 +1136,27 @@ This measurement is a dimensional reduction of the frame residual shape plots (\
 \section{Conclusions}
 \label{sec:conclusions}
 
-\todo{In prep.}
+In this work, we have presented near-infrared ($J$ and $K_s$) images of M31's entire bulge and disk with CFHT/WIRCam. These maps surpass the 2MASS \citep{Beaton:2007} and Spitzer \citep{Barmby:2006} mosaics with superior resolution (1\arcsec pix$^{-1}$) that permits the resolution of individual stars throughout M31's mid and outer disk. The dataset is also complementary to the HST/WF3 PHAT survey (Dalcanton \etal) by providing complete areal coverage of M31's disk to $R=22$~kpc, and by offering a broader NIR colour baseline ($J-K_s$) than is offered by WF3 (approximately  $J-H$). NIR mosaics of M31 have crucial applications for studies of the nearly attenuation-free stellar structure of our nearest spiral neighbour, and for tests of stellar population synthesis models in NIR regimes.
+
+The paramount task of this paper has been to establish procedures for accurately recovering near-infrared surface brightness across a target FIXME sq. deg. mosaic surface using a sky target nodding observing strategy with the WIRCam instrument on CFHT. The NIR sky is challenging because it is roughly 3 dex brighter than the disk at $R=20 kpc$; only the central bulge is brighter than the sky in the NIR. This problem is compounded by the fact that M31 is a large target on the sky, so that the NIR sky brightness \emph{at} M31 cannot be directly measured.
+
+We find that our NIR SB reconstruction is limited on two regimes. On a large scale, the absolute surface brightness of the mosaic is uncertain by $\sim \sigma_{\Delta_B} / \sqrt{N_blocks}$, a consequence of the uncertainty in sky level induced by  not measuring the sky level directly on M31's disk. This zeropoint can ultimately be established using resolved stellar populations, the subject of a future \androids\ work. A more delicate SB error regime occurs on small scales, where the 2D SB shapes of WIRCam blocks ($20\arcmin\times20\arcmin$) are uncertain by FIXME\% of the sky intensity, centre-to-edge. These shape errors are a consequence of strong variations in WIRCam flat fields (FIXME 1\% over 30 minutes), and spatial patterns in the NIR skyglow itself. 
+
+In this work we have developed an in-house pipeline for processing CFHT/WIRCam data to preserve surface brightness information. Our pipeline begins with unflat WIRCam frames that have been dark subtracted and linearity-corrected by CFHT's I'iwi pipeline. We find that skyflats are superior to dome and twilight flats in that they capture electronic structure of WIRCam amplifier bands with high fidelity. In existing WIRCam data, electronic amplifier band signatures are removed by median sky subtraction, which is a misuse of the method.\footnote{In our pipeline, median sky subtraction is only employed for removing large scale background shapes.} Furthermore, we have adopted \emph{real-time} sky flat fielding (flats built in a window of $\sim 30$ minutes) over flats built over a broader baseline (a WIRCam queue run) as we find evidence for WIRCam flat field evolution on the scale of tens of minutes. The exact source of WIRCam flat field evolution remains unknown (\ie, driven by optical geometry or electronics).
+
+Our sky flats are scaled so that each WIRCam detector has a unified zeropoint (unlike the I'iwi pipeline, and more akin to CFHT/MegaCam Elixir pipeline CITE). We estimate zeropoints using \emph{in situ} 2MASS catalog stars, and find that our sky flats are able to unify detector-to-detector zeropoints within a standard deviation of 0.05 mag. Unexpectedly, our zeropoint estimation method finds large WIRCam-2MASS color transformation coefficients: $A_J = 0.12 \pm 0.04$ and $A_{K_s} = -0.16 \pm 0.05$.
+
+Sky subtraction is carried out in two phases: \emph{median sky frame subtraction} using sky field samples, and \emph{sky offset optimization} using information in image-to-image differences. We find median sky frame subtraction to be necessary for removing shapes with amplitudes of TODO\% of the sky from frames that are not flattened by our real-time sky flats. Whether these shapes are a consequence of flat field evolution, or a detector background \citep[\eg][]{Vaduvescu:2004} is unknown.
+
+Median sky subtraction leaves the sky level of individual WIRCam disk integrations uncertain by FIXME 2\% of the sky level. Our remedy is to solve for sky offsets---simply, scalar intensity levels---that are added to each image frame to minimize the differences of overlapping images. To efficiently solve for these offsets we organize the image set hierarchically: offsetting detector frames into stacks, stacks into blocks, and blocks into the full mosaic. These offsets authentically capture the temporal sky variability while imaging the M31 disk (see Fig TODO) and reduce the mean block-to-block residual difference from FIXME 1\% to 0.02\% of the sky level. Any additional reduction in block-to-block surface brightness differences is frustrated by errors in the shapes of blocks caused by a combination of WIRCam flat field variability and spatial sky variability.
+
+The \sw{Montage} algorithm also allows planar sky offsets to be fitted, although we find that these additional degrees do not necessary add useful information to the mosaic---and indeed, can be harmful to the absolute accuracy of surface brightness. Rigorously addressing shape errors in the mosaic requires absolute, external surface brightness calibration.
+
+In this work we have processed WIRCam observations from two semesters: 2007B and 2009B. This has afforded us an opportunity to directly compare two observational strategies. In short, the 2009B program was designed to minimize sky sampling latency to within 2.5 minutes (to the detriment of observational efficiency), and to sample as many sites in the sky (and thus instantaneous sky shapes) as possible. The 2007B program used standard methods: limiting sky latency to 4 minutes to enhance observing efficiency, and returning to one of four sky fields to minimize nodding distance. We \emph{do not} find that minimizing sky sampling latency (\ie, 2009B) generates real improvements in the sky accuracy of a single target frame, as measured by the frame-level sky offset distribution ($\sigma_{\Delta_F}$, Table FIXME). \emph{Any nod on the scale of 1\arcdeg --2\arcdeg\ induces sky uncertainties on the order of 2\% of the sky level.} The only verifiable improvements offered by the 2009B campaign are predicted by the law of averages: by  obtaining CHECKME $2.5\times$ more integrations per field in the $J$, the absolute levels of the 2009B blocks were more accurately by a factor of TODO than 2009B blocks. Similarly, we find that the shapes of 2009B $J$ blocks are FIXME more robust than 2007B $J$ blocks. In applications of sky-target nodding, such as this program, the only reliable method of reducing uncertainty in the absolute sky level is by obtaining as many sky-target observation pairs as is affordable.
+
+We have investigated the conditions of sky level and sky shape variability, to determine if NIR sky-target nodding programs can be optimized in queue planning. Although we confirm that \emph{sky level} is primarily dependent on time since sunset and airmass (see also Vaduvescu 04, others, CITE), we do not find statistical correlations for sky level variability, nor for the variability in the shapes of frames. Sky level variability in a fixed time windows are Poisson distributed with an increasing $\lambda$ parameter for broader time windows. TODO.
+
+Future works will capitalize on the data reduction presented in this paper, analyzing both the resolved stellar populations and panchromatic spectral energy distribution of M31.
 
 \bibliography{master}
 
